--- a/Lab11/package.json
+++ b/Lab11/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^15.3.2",
     "remarkable": "^1.7.1",
     "style-loader": "^0.13.1",
+    "update-notifier": "^2.5.0",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
