--- a/Lab11/package.json
+++ b/Lab11/package.json
@@ -55,6 +55,6 @@
   },
   "homepage": "https://github.com/reactjs/react-tutorial",
   "engines": {
-    "node": "0.12.x"
+    "node": "9.6.1"
   }
 }
