--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "scripts": {
     "build": "webpack --progress",
-    "dev": "node server.js & webpack-dev-server --progress",
+    "dev": "kill $(pgrep node) ; nodemon --ignore app/ server.js & webpack-dev-server --progress &",
+    "stop": "kill $(pgrep node)",
     "install": "webpack --progress --config ./webpack.production.config.js",
-    "start": "kill $(pgrep node); node server.js &",
-    "stop": "kill $(pgrep node)"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -54,6 +54,6 @@
   },
   "homepage": "https://github.com/reactjs/react-tutorial",
   "engines": {
-    "node": "9.6.1"
+    "node": "^4.x"
   }
 }
