--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "build": "webpack --progress",
-    "dev": "kill $(pgrep node) ; nodemon --ignore app/ server.js & webpack-dev-server --progress &",
+    "dev": "node server.js & webpack-dev-server --progress",
     "stop": "kill $(pgrep node)",
     "install": "webpack --progress --config ./webpack.production.config.js",
     "start": "node server.js"
